In window.js, added an extra unit/element for the menu, and adjusted things to accomodate the submenu overflow.  This fixes scrolling the container unit. (Made the dashboard extra long to show scrolling.) (cherry picked from commit 212a36113f826c216eb23a8d08af0c4d5c86fd80)

--- a/share/ic/styles/manage.css
+++ b/share/ic/styles/manage.css
@@ -1,3 +1,7 @@
+#ic-manage-app-container {
+  text-align: left;
+}
+
 .yui3-js-enabled .hide-while-loading {
   display: none;
 }
@@ -8,5 +12,19 @@
 
 .yui3-js-enabled .display-while-loading {
   display: block;
+}
+
+.allow-overflow {
+  overflow: visible !important;
+}
+
+#manage_header span {
+  font-size: 138.5%; 
+  font-weight: bold;
+}
+
+#manage_footer {
+  padding: 8px;
+  font-size: 85%;
 }
 
